Add missing semicolon in audio_decoder.cc to fix the compilation error

BUG=691157

TBR=dalecurtis@chromium.org

Review-Url: https://codereview.chromium.org/2686313003
Cr-Commit-Position: refs/heads/master@{#449823}

Former-commit-id: 77aa1a3c7c75269bf904d4d447cee5b7052120e2